[package]
name = "t01"
version = "0.1.0"
authors = ["Michael Angerman <stormasm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#sled = "0.24.1"

[dependencies]
sled = { git = "https://github.com/spacejam/sled" }
